dsl/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> script
Rule 1     script -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> QUBIT IDENTIFIER
Rule 5     statement -> H IDENTIFIER
Rule 6     statement -> X IDENTIFIER
Rule 7     statement -> S IDENTIFIER
Rule 8     statement -> T IDENTIFIER
Rule 9     statement -> RZ IDENTIFIER NUMBER
Rule 10    statement -> CNOT IDENTIFIER IDENTIFIER
Rule 11    statement -> MEASURE IDENTIFIER IDENTIFIER
Rule 12    statement -> PRINT IDENTIFIER
Rule 13    statement -> ALICE_SEND IDENTIFIER
Rule 14    statement -> BOB_MEASURE IDENTIFIER IDENTIFIER
Rule 15    statement -> SIFT_KEYS
Rule 16    statement -> CHECK_EAVESDROPPING
Rule 17    statement -> GENERATE_KEY IDENTIFIER
Rule 18    statement -> EAVESDROP
Rule 19    statement -> RANDOM_GATE IDENTIFIER
Rule 20    statement -> RANDOM_GATE IDENTIFIER IDENTIFIER

Terminals, with rules where they appear

ALICE_SEND           : 13
BOB_MEASURE          : 14
CHECK_EAVESDROPPING  : 16
CNOT                 : 10
EAVESDROP            : 18
GENERATE_KEY         : 17
H                    : 5
IDENTIFIER           : 4 5 6 7 8 9 10 10 11 11 12 13 14 14 17 19 20 20
MEASURE              : 11
NUMBER               : 9
PRINT                : 12
QUBIT                : 4
RANDOM_GATE          : 19 20
RZ                   : 9
S                    : 7
SIFT_KEYS            : 15
T                    : 8
X                    : 6
error                : 

Nonterminals, with rules where they appear

script               : 0
statement            : 2 3
statements           : 1 2

Parsing method: LALR

state 0

    (0) S' -> . script
    (1) script -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . QUBIT IDENTIFIER
    (5) statement -> . H IDENTIFIER
    (6) statement -> . X IDENTIFIER
    (7) statement -> . S IDENTIFIER
    (8) statement -> . T IDENTIFIER
    (9) statement -> . RZ IDENTIFIER NUMBER
    (10) statement -> . CNOT IDENTIFIER IDENTIFIER
    (11) statement -> . MEASURE IDENTIFIER IDENTIFIER
    (12) statement -> . PRINT IDENTIFIER
    (13) statement -> . ALICE_SEND IDENTIFIER
    (14) statement -> . BOB_MEASURE IDENTIFIER IDENTIFIER
    (15) statement -> . SIFT_KEYS
    (16) statement -> . CHECK_EAVESDROPPING
    (17) statement -> . GENERATE_KEY IDENTIFIER
    (18) statement -> . EAVESDROP
    (19) statement -> . RANDOM_GATE IDENTIFIER
    (20) statement -> . RANDOM_GATE IDENTIFIER IDENTIFIER

    QUBIT           shift and go to state 4
    H               shift and go to state 5
    X               shift and go to state 6
    S               shift and go to state 7
    T               shift and go to state 8
    RZ              shift and go to state 9
    CNOT            shift and go to state 10
    MEASURE         shift and go to state 11
    PRINT           shift and go to state 12
    ALICE_SEND      shift and go to state 13
    BOB_MEASURE     shift and go to state 14
    SIFT_KEYS       shift and go to state 15
    CHECK_EAVESDROPPING shift and go to state 16
    GENERATE_KEY    shift and go to state 17
    EAVESDROP       shift and go to state 18
    RANDOM_GATE     shift and go to state 19

    script                         shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3

state 1

    (0) S' -> script .



state 2

    (1) script -> statements .
    (2) statements -> statements . statement
    (4) statement -> . QUBIT IDENTIFIER
    (5) statement -> . H IDENTIFIER
    (6) statement -> . X IDENTIFIER
    (7) statement -> . S IDENTIFIER
    (8) statement -> . T IDENTIFIER
    (9) statement -> . RZ IDENTIFIER NUMBER
    (10) statement -> . CNOT IDENTIFIER IDENTIFIER
    (11) statement -> . MEASURE IDENTIFIER IDENTIFIER
    (12) statement -> . PRINT IDENTIFIER
    (13) statement -> . ALICE_SEND IDENTIFIER
    (14) statement -> . BOB_MEASURE IDENTIFIER IDENTIFIER
    (15) statement -> . SIFT_KEYS
    (16) statement -> . CHECK_EAVESDROPPING
    (17) statement -> . GENERATE_KEY IDENTIFIER
    (18) statement -> . EAVESDROP
    (19) statement -> . RANDOM_GATE IDENTIFIER
    (20) statement -> . RANDOM_GATE IDENTIFIER IDENTIFIER

    $end            reduce using rule 1 (script -> statements .)
    QUBIT           shift and go to state 4
    H               shift and go to state 5
    X               shift and go to state 6
    S               shift and go to state 7
    T               shift and go to state 8
    RZ              shift and go to state 9
    CNOT            shift and go to state 10
    MEASURE         shift and go to state 11
    PRINT           shift and go to state 12
    ALICE_SEND      shift and go to state 13
    BOB_MEASURE     shift and go to state 14
    SIFT_KEYS       shift and go to state 15
    CHECK_EAVESDROPPING shift and go to state 16
    GENERATE_KEY    shift and go to state 17
    EAVESDROP       shift and go to state 18
    RANDOM_GATE     shift and go to state 19

    statement                      shift and go to state 20

state 3

    (3) statements -> statement .

    QUBIT           reduce using rule 3 (statements -> statement .)
    H               reduce using rule 3 (statements -> statement .)
    X               reduce using rule 3 (statements -> statement .)
    S               reduce using rule 3 (statements -> statement .)
    T               reduce using rule 3 (statements -> statement .)
    RZ              reduce using rule 3 (statements -> statement .)
    CNOT            reduce using rule 3 (statements -> statement .)
    MEASURE         reduce using rule 3 (statements -> statement .)
    PRINT           reduce using rule 3 (statements -> statement .)
    ALICE_SEND      reduce using rule 3 (statements -> statement .)
    BOB_MEASURE     reduce using rule 3 (statements -> statement .)
    SIFT_KEYS       reduce using rule 3 (statements -> statement .)
    CHECK_EAVESDROPPING reduce using rule 3 (statements -> statement .)
    GENERATE_KEY    reduce using rule 3 (statements -> statement .)
    EAVESDROP       reduce using rule 3 (statements -> statement .)
    RANDOM_GATE     reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> QUBIT . IDENTIFIER

    IDENTIFIER      shift and go to state 21


state 5

    (5) statement -> H . IDENTIFIER

    IDENTIFIER      shift and go to state 22


state 6

    (6) statement -> X . IDENTIFIER

    IDENTIFIER      shift and go to state 23


state 7

    (7) statement -> S . IDENTIFIER

    IDENTIFIER      shift and go to state 24


state 8

    (8) statement -> T . IDENTIFIER

    IDENTIFIER      shift and go to state 25


state 9

    (9) statement -> RZ . IDENTIFIER NUMBER

    IDENTIFIER      shift and go to state 26


state 10

    (10) statement -> CNOT . IDENTIFIER IDENTIFIER

    IDENTIFIER      shift and go to state 27


state 11

    (11) statement -> MEASURE . IDENTIFIER IDENTIFIER

    IDENTIFIER      shift and go to state 28


state 12

    (12) statement -> PRINT . IDENTIFIER

    IDENTIFIER      shift and go to state 29


state 13

    (13) statement -> ALICE_SEND . IDENTIFIER

    IDENTIFIER      shift and go to state 30


state 14

    (14) statement -> BOB_MEASURE . IDENTIFIER IDENTIFIER

    IDENTIFIER      shift and go to state 31


state 15

    (15) statement -> SIFT_KEYS .

    QUBIT           reduce using rule 15 (statement -> SIFT_KEYS .)
    H               reduce using rule 15 (statement -> SIFT_KEYS .)
    X               reduce using rule 15 (statement -> SIFT_KEYS .)
    S               reduce using rule 15 (statement -> SIFT_KEYS .)
    T               reduce using rule 15 (statement -> SIFT_KEYS .)
    RZ              reduce using rule 15 (statement -> SIFT_KEYS .)
    CNOT            reduce using rule 15 (statement -> SIFT_KEYS .)
    MEASURE         reduce using rule 15 (statement -> SIFT_KEYS .)
    PRINT           reduce using rule 15 (statement -> SIFT_KEYS .)
    ALICE_SEND      reduce using rule 15 (statement -> SIFT_KEYS .)
    BOB_MEASURE     reduce using rule 15 (statement -> SIFT_KEYS .)
    SIFT_KEYS       reduce using rule 15 (statement -> SIFT_KEYS .)
    CHECK_EAVESDROPPING reduce using rule 15 (statement -> SIFT_KEYS .)
    GENERATE_KEY    reduce using rule 15 (statement -> SIFT_KEYS .)
    EAVESDROP       reduce using rule 15 (statement -> SIFT_KEYS .)
    RANDOM_GATE     reduce using rule 15 (statement -> SIFT_KEYS .)
    $end            reduce using rule 15 (statement -> SIFT_KEYS .)


state 16

    (16) statement -> CHECK_EAVESDROPPING .

    QUBIT           reduce using rule 16 (statement -> CHECK_EAVESDROPPING .)
    H               reduce using rule 16 (statement -> CHECK_EAVESDROPPING .)
    X               reduce using rule 16 (statement -> CHECK_EAVESDROPPING .)
    S               reduce using rule 16 (statement -> CHECK_EAVESDROPPING .)
    T               reduce using rule 16 (statement -> CHECK_EAVESDROPPING .)
    RZ              reduce using rule 16 (statement -> CHECK_EAVESDROPPING .)
    CNOT            reduce using rule 16 (statement -> CHECK_EAVESDROPPING .)
    MEASURE         reduce using rule 16 (statement -> CHECK_EAVESDROPPING .)
    PRINT           reduce using rule 16 (statement -> CHECK_EAVESDROPPING .)
    ALICE_SEND      reduce using rule 16 (statement -> CHECK_EAVESDROPPING .)
    BOB_MEASURE     reduce using rule 16 (statement -> CHECK_EAVESDROPPING .)
    SIFT_KEYS       reduce using rule 16 (statement -> CHECK_EAVESDROPPING .)
    CHECK_EAVESDROPPING reduce using rule 16 (statement -> CHECK_EAVESDROPPING .)
    GENERATE_KEY    reduce using rule 16 (statement -> CHECK_EAVESDROPPING .)
    EAVESDROP       reduce using rule 16 (statement -> CHECK_EAVESDROPPING .)
    RANDOM_GATE     reduce using rule 16 (statement -> CHECK_EAVESDROPPING .)
    $end            reduce using rule 16 (statement -> CHECK_EAVESDROPPING .)


state 17

    (17) statement -> GENERATE_KEY . IDENTIFIER

    IDENTIFIER      shift and go to state 32


state 18

    (18) statement -> EAVESDROP .

    QUBIT           reduce using rule 18 (statement -> EAVESDROP .)
    H               reduce using rule 18 (statement -> EAVESDROP .)
    X               reduce using rule 18 (statement -> EAVESDROP .)
    S               reduce using rule 18 (statement -> EAVESDROP .)
    T               reduce using rule 18 (statement -> EAVESDROP .)
    RZ              reduce using rule 18 (statement -> EAVESDROP .)
    CNOT            reduce using rule 18 (statement -> EAVESDROP .)
    MEASURE         reduce using rule 18 (statement -> EAVESDROP .)
    PRINT           reduce using rule 18 (statement -> EAVESDROP .)
    ALICE_SEND      reduce using rule 18 (statement -> EAVESDROP .)
    BOB_MEASURE     reduce using rule 18 (statement -> EAVESDROP .)
    SIFT_KEYS       reduce using rule 18 (statement -> EAVESDROP .)
    CHECK_EAVESDROPPING reduce using rule 18 (statement -> EAVESDROP .)
    GENERATE_KEY    reduce using rule 18 (statement -> EAVESDROP .)
    EAVESDROP       reduce using rule 18 (statement -> EAVESDROP .)
    RANDOM_GATE     reduce using rule 18 (statement -> EAVESDROP .)
    $end            reduce using rule 18 (statement -> EAVESDROP .)


state 19

    (19) statement -> RANDOM_GATE . IDENTIFIER
    (20) statement -> RANDOM_GATE . IDENTIFIER IDENTIFIER

    IDENTIFIER      shift and go to state 33


state 20

    (2) statements -> statements statement .

    QUBIT           reduce using rule 2 (statements -> statements statement .)
    H               reduce using rule 2 (statements -> statements statement .)
    X               reduce using rule 2 (statements -> statements statement .)
    S               reduce using rule 2 (statements -> statements statement .)
    T               reduce using rule 2 (statements -> statements statement .)
    RZ              reduce using rule 2 (statements -> statements statement .)
    CNOT            reduce using rule 2 (statements -> statements statement .)
    MEASURE         reduce using rule 2 (statements -> statements statement .)
    PRINT           reduce using rule 2 (statements -> statements statement .)
    ALICE_SEND      reduce using rule 2 (statements -> statements statement .)
    BOB_MEASURE     reduce using rule 2 (statements -> statements statement .)
    SIFT_KEYS       reduce using rule 2 (statements -> statements statement .)
    CHECK_EAVESDROPPING reduce using rule 2 (statements -> statements statement .)
    GENERATE_KEY    reduce using rule 2 (statements -> statements statement .)
    EAVESDROP       reduce using rule 2 (statements -> statements statement .)
    RANDOM_GATE     reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)


state 21

    (4) statement -> QUBIT IDENTIFIER .

    QUBIT           reduce using rule 4 (statement -> QUBIT IDENTIFIER .)
    H               reduce using rule 4 (statement -> QUBIT IDENTIFIER .)
    X               reduce using rule 4 (statement -> QUBIT IDENTIFIER .)
    S               reduce using rule 4 (statement -> QUBIT IDENTIFIER .)
    T               reduce using rule 4 (statement -> QUBIT IDENTIFIER .)
    RZ              reduce using rule 4 (statement -> QUBIT IDENTIFIER .)
    CNOT            reduce using rule 4 (statement -> QUBIT IDENTIFIER .)
    MEASURE         reduce using rule 4 (statement -> QUBIT IDENTIFIER .)
    PRINT           reduce using rule 4 (statement -> QUBIT IDENTIFIER .)
    ALICE_SEND      reduce using rule 4 (statement -> QUBIT IDENTIFIER .)
    BOB_MEASURE     reduce using rule 4 (statement -> QUBIT IDENTIFIER .)
    SIFT_KEYS       reduce using rule 4 (statement -> QUBIT IDENTIFIER .)
    CHECK_EAVESDROPPING reduce using rule 4 (statement -> QUBIT IDENTIFIER .)
    GENERATE_KEY    reduce using rule 4 (statement -> QUBIT IDENTIFIER .)
    EAVESDROP       reduce using rule 4 (statement -> QUBIT IDENTIFIER .)
    RANDOM_GATE     reduce using rule 4 (statement -> QUBIT IDENTIFIER .)
    $end            reduce using rule 4 (statement -> QUBIT IDENTIFIER .)


state 22

    (5) statement -> H IDENTIFIER .

    QUBIT           reduce using rule 5 (statement -> H IDENTIFIER .)
    H               reduce using rule 5 (statement -> H IDENTIFIER .)
    X               reduce using rule 5 (statement -> H IDENTIFIER .)
    S               reduce using rule 5 (statement -> H IDENTIFIER .)
    T               reduce using rule 5 (statement -> H IDENTIFIER .)
    RZ              reduce using rule 5 (statement -> H IDENTIFIER .)
    CNOT            reduce using rule 5 (statement -> H IDENTIFIER .)
    MEASURE         reduce using rule 5 (statement -> H IDENTIFIER .)
    PRINT           reduce using rule 5 (statement -> H IDENTIFIER .)
    ALICE_SEND      reduce using rule 5 (statement -> H IDENTIFIER .)
    BOB_MEASURE     reduce using rule 5 (statement -> H IDENTIFIER .)
    SIFT_KEYS       reduce using rule 5 (statement -> H IDENTIFIER .)
    CHECK_EAVESDROPPING reduce using rule 5 (statement -> H IDENTIFIER .)
    GENERATE_KEY    reduce using rule 5 (statement -> H IDENTIFIER .)
    EAVESDROP       reduce using rule 5 (statement -> H IDENTIFIER .)
    RANDOM_GATE     reduce using rule 5 (statement -> H IDENTIFIER .)
    $end            reduce using rule 5 (statement -> H IDENTIFIER .)


state 23

    (6) statement -> X IDENTIFIER .

    QUBIT           reduce using rule 6 (statement -> X IDENTIFIER .)
    H               reduce using rule 6 (statement -> X IDENTIFIER .)
    X               reduce using rule 6 (statement -> X IDENTIFIER .)
    S               reduce using rule 6 (statement -> X IDENTIFIER .)
    T               reduce using rule 6 (statement -> X IDENTIFIER .)
    RZ              reduce using rule 6 (statement -> X IDENTIFIER .)
    CNOT            reduce using rule 6 (statement -> X IDENTIFIER .)
    MEASURE         reduce using rule 6 (statement -> X IDENTIFIER .)
    PRINT           reduce using rule 6 (statement -> X IDENTIFIER .)
    ALICE_SEND      reduce using rule 6 (statement -> X IDENTIFIER .)
    BOB_MEASURE     reduce using rule 6 (statement -> X IDENTIFIER .)
    SIFT_KEYS       reduce using rule 6 (statement -> X IDENTIFIER .)
    CHECK_EAVESDROPPING reduce using rule 6 (statement -> X IDENTIFIER .)
    GENERATE_KEY    reduce using rule 6 (statement -> X IDENTIFIER .)
    EAVESDROP       reduce using rule 6 (statement -> X IDENTIFIER .)
    RANDOM_GATE     reduce using rule 6 (statement -> X IDENTIFIER .)
    $end            reduce using rule 6 (statement -> X IDENTIFIER .)


state 24

    (7) statement -> S IDENTIFIER .

    QUBIT           reduce using rule 7 (statement -> S IDENTIFIER .)
    H               reduce using rule 7 (statement -> S IDENTIFIER .)
    X               reduce using rule 7 (statement -> S IDENTIFIER .)
    S               reduce using rule 7 (statement -> S IDENTIFIER .)
    T               reduce using rule 7 (statement -> S IDENTIFIER .)
    RZ              reduce using rule 7 (statement -> S IDENTIFIER .)
    CNOT            reduce using rule 7 (statement -> S IDENTIFIER .)
    MEASURE         reduce using rule 7 (statement -> S IDENTIFIER .)
    PRINT           reduce using rule 7 (statement -> S IDENTIFIER .)
    ALICE_SEND      reduce using rule 7 (statement -> S IDENTIFIER .)
    BOB_MEASURE     reduce using rule 7 (statement -> S IDENTIFIER .)
    SIFT_KEYS       reduce using rule 7 (statement -> S IDENTIFIER .)
    CHECK_EAVESDROPPING reduce using rule 7 (statement -> S IDENTIFIER .)
    GENERATE_KEY    reduce using rule 7 (statement -> S IDENTIFIER .)
    EAVESDROP       reduce using rule 7 (statement -> S IDENTIFIER .)
    RANDOM_GATE     reduce using rule 7 (statement -> S IDENTIFIER .)
    $end            reduce using rule 7 (statement -> S IDENTIFIER .)


state 25

    (8) statement -> T IDENTIFIER .

    QUBIT           reduce using rule 8 (statement -> T IDENTIFIER .)
    H               reduce using rule 8 (statement -> T IDENTIFIER .)
    X               reduce using rule 8 (statement -> T IDENTIFIER .)
    S               reduce using rule 8 (statement -> T IDENTIFIER .)
    T               reduce using rule 8 (statement -> T IDENTIFIER .)
    RZ              reduce using rule 8 (statement -> T IDENTIFIER .)
    CNOT            reduce using rule 8 (statement -> T IDENTIFIER .)
    MEASURE         reduce using rule 8 (statement -> T IDENTIFIER .)
    PRINT           reduce using rule 8 (statement -> T IDENTIFIER .)
    ALICE_SEND      reduce using rule 8 (statement -> T IDENTIFIER .)
    BOB_MEASURE     reduce using rule 8 (statement -> T IDENTIFIER .)
    SIFT_KEYS       reduce using rule 8 (statement -> T IDENTIFIER .)
    CHECK_EAVESDROPPING reduce using rule 8 (statement -> T IDENTIFIER .)
    GENERATE_KEY    reduce using rule 8 (statement -> T IDENTIFIER .)
    EAVESDROP       reduce using rule 8 (statement -> T IDENTIFIER .)
    RANDOM_GATE     reduce using rule 8 (statement -> T IDENTIFIER .)
    $end            reduce using rule 8 (statement -> T IDENTIFIER .)


state 26

    (9) statement -> RZ IDENTIFIER . NUMBER

    NUMBER          shift and go to state 34


state 27

    (10) statement -> CNOT IDENTIFIER . IDENTIFIER

    IDENTIFIER      shift and go to state 35


state 28

    (11) statement -> MEASURE IDENTIFIER . IDENTIFIER

    IDENTIFIER      shift and go to state 36


state 29

    (12) statement -> PRINT IDENTIFIER .

    QUBIT           reduce using rule 12 (statement -> PRINT IDENTIFIER .)
    H               reduce using rule 12 (statement -> PRINT IDENTIFIER .)
    X               reduce using rule 12 (statement -> PRINT IDENTIFIER .)
    S               reduce using rule 12 (statement -> PRINT IDENTIFIER .)
    T               reduce using rule 12 (statement -> PRINT IDENTIFIER .)
    RZ              reduce using rule 12 (statement -> PRINT IDENTIFIER .)
    CNOT            reduce using rule 12 (statement -> PRINT IDENTIFIER .)
    MEASURE         reduce using rule 12 (statement -> PRINT IDENTIFIER .)
    PRINT           reduce using rule 12 (statement -> PRINT IDENTIFIER .)
    ALICE_SEND      reduce using rule 12 (statement -> PRINT IDENTIFIER .)
    BOB_MEASURE     reduce using rule 12 (statement -> PRINT IDENTIFIER .)
    SIFT_KEYS       reduce using rule 12 (statement -> PRINT IDENTIFIER .)
    CHECK_EAVESDROPPING reduce using rule 12 (statement -> PRINT IDENTIFIER .)
    GENERATE_KEY    reduce using rule 12 (statement -> PRINT IDENTIFIER .)
    EAVESDROP       reduce using rule 12 (statement -> PRINT IDENTIFIER .)
    RANDOM_GATE     reduce using rule 12 (statement -> PRINT IDENTIFIER .)
    $end            reduce using rule 12 (statement -> PRINT IDENTIFIER .)


state 30

    (13) statement -> ALICE_SEND IDENTIFIER .

    QUBIT           reduce using rule 13 (statement -> ALICE_SEND IDENTIFIER .)
    H               reduce using rule 13 (statement -> ALICE_SEND IDENTIFIER .)
    X               reduce using rule 13 (statement -> ALICE_SEND IDENTIFIER .)
    S               reduce using rule 13 (statement -> ALICE_SEND IDENTIFIER .)
    T               reduce using rule 13 (statement -> ALICE_SEND IDENTIFIER .)
    RZ              reduce using rule 13 (statement -> ALICE_SEND IDENTIFIER .)
    CNOT            reduce using rule 13 (statement -> ALICE_SEND IDENTIFIER .)
    MEASURE         reduce using rule 13 (statement -> ALICE_SEND IDENTIFIER .)
    PRINT           reduce using rule 13 (statement -> ALICE_SEND IDENTIFIER .)
    ALICE_SEND      reduce using rule 13 (statement -> ALICE_SEND IDENTIFIER .)
    BOB_MEASURE     reduce using rule 13 (statement -> ALICE_SEND IDENTIFIER .)
    SIFT_KEYS       reduce using rule 13 (statement -> ALICE_SEND IDENTIFIER .)
    CHECK_EAVESDROPPING reduce using rule 13 (statement -> ALICE_SEND IDENTIFIER .)
    GENERATE_KEY    reduce using rule 13 (statement -> ALICE_SEND IDENTIFIER .)
    EAVESDROP       reduce using rule 13 (statement -> ALICE_SEND IDENTIFIER .)
    RANDOM_GATE     reduce using rule 13 (statement -> ALICE_SEND IDENTIFIER .)
    $end            reduce using rule 13 (statement -> ALICE_SEND IDENTIFIER .)


state 31

    (14) statement -> BOB_MEASURE IDENTIFIER . IDENTIFIER

    IDENTIFIER      shift and go to state 37


state 32

    (17) statement -> GENERATE_KEY IDENTIFIER .

    QUBIT           reduce using rule 17 (statement -> GENERATE_KEY IDENTIFIER .)
    H               reduce using rule 17 (statement -> GENERATE_KEY IDENTIFIER .)
    X               reduce using rule 17 (statement -> GENERATE_KEY IDENTIFIER .)
    S               reduce using rule 17 (statement -> GENERATE_KEY IDENTIFIER .)
    T               reduce using rule 17 (statement -> GENERATE_KEY IDENTIFIER .)
    RZ              reduce using rule 17 (statement -> GENERATE_KEY IDENTIFIER .)
    CNOT            reduce using rule 17 (statement -> GENERATE_KEY IDENTIFIER .)
    MEASURE         reduce using rule 17 (statement -> GENERATE_KEY IDENTIFIER .)
    PRINT           reduce using rule 17 (statement -> GENERATE_KEY IDENTIFIER .)
    ALICE_SEND      reduce using rule 17 (statement -> GENERATE_KEY IDENTIFIER .)
    BOB_MEASURE     reduce using rule 17 (statement -> GENERATE_KEY IDENTIFIER .)
    SIFT_KEYS       reduce using rule 17 (statement -> GENERATE_KEY IDENTIFIER .)
    CHECK_EAVESDROPPING reduce using rule 17 (statement -> GENERATE_KEY IDENTIFIER .)
    GENERATE_KEY    reduce using rule 17 (statement -> GENERATE_KEY IDENTIFIER .)
    EAVESDROP       reduce using rule 17 (statement -> GENERATE_KEY IDENTIFIER .)
    RANDOM_GATE     reduce using rule 17 (statement -> GENERATE_KEY IDENTIFIER .)
    $end            reduce using rule 17 (statement -> GENERATE_KEY IDENTIFIER .)


state 33

    (19) statement -> RANDOM_GATE IDENTIFIER .
    (20) statement -> RANDOM_GATE IDENTIFIER . IDENTIFIER

    QUBIT           reduce using rule 19 (statement -> RANDOM_GATE IDENTIFIER .)
    H               reduce using rule 19 (statement -> RANDOM_GATE IDENTIFIER .)
    X               reduce using rule 19 (statement -> RANDOM_GATE IDENTIFIER .)
    S               reduce using rule 19 (statement -> RANDOM_GATE IDENTIFIER .)
    T               reduce using rule 19 (statement -> RANDOM_GATE IDENTIFIER .)
    RZ              reduce using rule 19 (statement -> RANDOM_GATE IDENTIFIER .)
    CNOT            reduce using rule 19 (statement -> RANDOM_GATE IDENTIFIER .)
    MEASURE         reduce using rule 19 (statement -> RANDOM_GATE IDENTIFIER .)
    PRINT           reduce using rule 19 (statement -> RANDOM_GATE IDENTIFIER .)
    ALICE_SEND      reduce using rule 19 (statement -> RANDOM_GATE IDENTIFIER .)
    BOB_MEASURE     reduce using rule 19 (statement -> RANDOM_GATE IDENTIFIER .)
    SIFT_KEYS       reduce using rule 19 (statement -> RANDOM_GATE IDENTIFIER .)
    CHECK_EAVESDROPPING reduce using rule 19 (statement -> RANDOM_GATE IDENTIFIER .)
    GENERATE_KEY    reduce using rule 19 (statement -> RANDOM_GATE IDENTIFIER .)
    EAVESDROP       reduce using rule 19 (statement -> RANDOM_GATE IDENTIFIER .)
    RANDOM_GATE     reduce using rule 19 (statement -> RANDOM_GATE IDENTIFIER .)
    $end            reduce using rule 19 (statement -> RANDOM_GATE IDENTIFIER .)
    IDENTIFIER      shift and go to state 38


state 34

    (9) statement -> RZ IDENTIFIER NUMBER .
